# ctrader-connector

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: manager_example.rs  manager_exmaple.rs  rest_example.rs  webservices_example.rs
proto/: CommonModelMessages_External.proto
src/: creds.rs  lib.rs
src/manager/: api_client.rs  callback.rs  mod.rs  models.rs  serialization.rs
src/manager/proto/: CSMessages_External.proto  CSModelMessages_External.proto  CommonMessages_External.proto  CommonModelMessages_External.proto
src/rest/: creds.rs  endpoints.rs  errors.rs  mod.rs  models.rs  register_user_flow.rs  rest_client.rs  utils.rs
src/webservices/: api_client.rs  creds.rs  endpoints.rs  errors.rs  mod.rs  models.rs  register_user_flow.rs
