[package]
name = "ctrader-connector"
version = "0.10.3"
edition = "2021"
authors = ["gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-tcp-sockets = { tag = "0.1.11", git = "https://github.com/MyJetTools/my-tcp-sockets.git", features = ["with-tls"] }

http = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
tokio = { version = "*", features = ["full"] }
async-trait = "*"
futures = "*"
futures-util = { version = "*", default-features = false }
error-chain = { version = "0.12.4", default-features = false }
serde_qs = "*"
chrono = "*"
uuid = { version = "1.7.0", features = ["v4"] }
md5 = "0.7.0"
strum = { version = "0.26", features = ["derive"] }
csv = "1.3.0"
prost = "0.13.1"
tonic = "0.12.1"
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git" }
rustls = "0.23.25"

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }